unpackaged/main/default/objects/Contact/fields/hed__Gender__c.field-meta.xml
<CustomField>
    <fullName>hed__Gender__c</fullName>
    <description>Indicates the person&#39;s self-identified gender.</description>
    <inlineHelpText>Indicates the person&#39;s self-identified gender.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>