unpackaged/main/default/objects/Contact/fields/hed__PreferredPhone__c.field-meta.xml
<CustomField>
    <fullName>hed__PreferredPhone__c</fullName>
    <description>The phone (Work, Home, Mobile, Other) that this Contact prefers you to use.</description>
    <inlineHelpText>The phone (Work, Home, Mobile, Other) that this Contact prefers you to use.</inlineHelpText>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Other Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>