unpackaged/main/default/objects/Contact/fields/hed__Race__c.field-meta.xml
<CustomField>
    <fullName>hed__Race__c</fullName>
    <description>Select the race(s) this person uses to describe themself.</description>
    <inlineHelpText>Select the race(s) this person uses to describe themself.</inlineHelpText>
    <label>Race</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMIND</fullName>
            </value>
            <value>
                <fullName>ASIAN</fullName>
            </value>
            <value>
                <fullName>BLACK</fullName>
            </value>
            <value>
                <fullName>PACIF</fullName>
            </value>
            <value>
                <fullName>NPSEC</fullName>
            </value>
            <value>
                <fullName>WHITE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>