unpackaged/main/default/objects/Contact/fields/hed__Religion__c.field-meta.xml
<CustomField>
    <fullName>hed__Religion__c</fullName>
    <description>The religion this person practices.</description>
    <inlineHelpText>The religion this person practices.</inlineHelpText>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atheist</fullName>
            </value>
            <value>
                <fullName>Buddhist</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>