unpackaged/main/default/objects/Contact/fields/hed__Work_Address__c.field-meta.xml
<CustomField>
    <fullName>hed__Work_Address__c</fullName>
    <description>If you&#39;ve set &quot;Work&quot; as the Primary Address type, the Work Address is populated with the Mailing Address values. If &quot;Work&quot; is the Secondary Address type, the Work Address is populated with the &quot;Other Address&quot; values. This field is read-only.</description>
    <formula>if(
    ISPICKVAL(hed__Primary_Address_Type__c,&quot;Work&quot;),
    if(ISBLANK(MailingStreet) , &quot;&quot; , MailingStreet &amp; &quot;, &quot;) &amp;
    if(ISBLANK(MailingCity) , &quot;&quot; , MailingCity &amp; &quot;, &quot;) &amp;
    if(ISBLANK(MailingState) , &quot;&quot; , MailingState &amp; &quot; &quot;) &amp;
    if(ISBLANK(MailingPostalCode) , &quot;&quot; , MailingPostalCode) &amp;
    If(ISBLANK(MailingCountry ) , &quot;&quot; , &quot;, &quot; &amp; MailingCountry)
    ,
    if(ISPICKVAL(hed__Secondary_Address_Type__c,&quot;Work&quot;),
    if(ISBLANK(OtherStreet) , &quot;&quot; , OtherStreet &amp; &quot;, &quot;) &amp;
    if(ISBLANK(OtherCity) , &quot;&quot; , OtherCity &amp; &quot;, &quot;) &amp;
    if(ISBLANK(OtherState) , &quot;&quot; , OtherState &amp; &quot; &quot;) &amp;
    if(ISBLANK(OtherPostalCode) , &quot;&quot; , OtherPostalCode) &amp;
    If(ISBLANK(OtherCountry ) , &quot;&quot; , &quot;, &quot; &amp; OtherCountry)
    ,
    &quot;&quot;)
)</formula>
    <inlineHelpText>If you&#39;ve set &quot;Work&quot; as the Primary Address type, the Work Address is populated with the Mailing Address values. If &quot;Work&quot; is the Secondary Address type, the Work Address is populated with the &quot;Other Address&quot; values. This field is read-only.</inlineHelpText>
    <label>Work Address</label>
    <type>Text</type>
</CustomField>