unpackaged/main/default/objects/Contact/fields/Homegrown_ID__c.field-meta.xml
<CustomField>
    <fullName>Homegrown_ID__c</fullName>
    <description>For MDC Homegrown Admissions Application Matching</description>
    <externalId>true</externalId>
    <label>Homegrown ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>