unpackaged/main/default/objects/Contact/fields/Honors_College__c.field-meta.xml
<CustomField>
    <fullName>Honors_College__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by PeopleSoft integration</description>
    <label>Honors College</label>
    <type>Checkbox</type>
</CustomField>