unpackaged/main/default/objects/Contact/fields/HS_GPA_Higher_Than_3__c.field-meta.xml
<CustomField>
    <fullName>HS_GPA_Higher_Than_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>HS GPA Higher Than 3</label>
    <type>Checkbox</type>
</CustomField>