unpackaged/main/default/objects/Contact/fields/HS_Graduation_for_American_Dream__c.field-meta.xml
<CustomField>
    <fullName>HS_Graduation_for_American_Dream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>HS Graduation for American Dream</label>
    <type>Checkbox</type>
</CustomField>