unpackaged/main/default/objects/Contact/fields/HS_In_Florida__c.field-meta.xml
<CustomField>
    <fullName>HS_In_Florida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>HS In Florida</label>
    <type>Checkbox</type>
</CustomField>