unpackaged/main/default/objects/Contact/fields/HS_Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>HS_Institution_Type__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>HS Intitution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Non-Public High School</fullName>
            </value>
            <value>
                <fullName>Private School</fullName>
            </value>
            <value>
                <fullName>Public High School</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Home School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>