unpackaged/main/default/objects/Contact/fields/In_Plan_Medical_Student__c.field-meta.xml
<CustomField>
    <fullName>In_Plan_Medical_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>In-Plan Medical Student</label>
    <type>Checkbox</type>
</CustomField>