unpackaged/main/default/objects/Contact/fields/InactiveMyMdcEmail__c.field-meta.xml
<CustomField>
    <fullName>InactiveMyMdcEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FALSE means that the student that comes from an application has a MyMDC Email. TRUE means they don&#39;t have one.</description>
    <inlineHelpText>FALSE means that the student that comes from an application has a MyMDC Email. TRUE means they don&#39;t have one.</inlineHelpText>
    <label>InactiveMyMdcEmail</label>
    <type>Checkbox</type>
</CustomField>