unpackaged/main/default/objects/Contact/fields/Is_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Success Advisor</label>
    <type>Checkbox</type>
</CustomField>