unpackaged/main/default/objects/Contact/fields/Is_Pre_College_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_College_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-College Advisor</label>
    <type>Checkbox</type>
</CustomField>