unpackaged/main/default/objects/Contact/fields/Is_Student__c.field-meta.xml
<CustomField>
    <fullName>Is_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Student</label>
    <type>Checkbox</type>
</CustomField>