unpackaged/main/default/objects/Contact/fields/IsAdjunct__c.field-meta.xml
<CustomField>
    <fullName>IsAdjunct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Adjunct</label>
    <type>Checkbox</type>
</CustomField>