unpackaged/main/default/objects/Contact/fields/IsAlumni__c.field-meta.xml
<CustomField>
    <fullName>IsAlumni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Alumni</label>
    <type>Checkbox</type>
</CustomField>