unpackaged/main/default/objects/Contact/fields/IsAthlete__c.field-meta.xml
<CustomField>
    <fullName>IsAthlete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Student Athlete</label>
    <type>Checkbox</type>
</CustomField>