unpackaged/main/default/objects/Contact/fields/IsDualEnrolled__c.field-meta.xml
<CustomField>
    <fullName>IsDualEnrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Current Dual Enrollment Student</label>
    <type>Checkbox</type>
</CustomField>