unpackaged/main/default/objects/Contact/fields/IsNonCreditCurrentTerm__c.field-meta.xml
<CustomField>
    <fullName>IsNonCreditCurrentTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Current Non-Credit Student</label>
    <type>Checkbox</type>
</CustomField>