unpackaged/main/default/objects/Contact/fields/IsRetiree__c.field-meta.xml
<CustomField>
    <fullName>IsRetiree__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Retiree</label>
    <type>Checkbox</type>
</CustomField>