unpackaged/main/default/objects/Contact/fields/Last_Dual_Enrollment_Term__c.field-meta.xml
<CustomField>
    <fullName>Last_Dual_Enrollment_Term__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Last Dual Enrollment Term</label>
    <length>4</length>
    <type>Text</type>
</CustomField>