unpackaged/main/default/objects/Contact/fields/Last_Orientation_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Last_Orientation_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the latest orientation record for the student. This is only populated if a student attended orientation.</description>
    <inlineHelpText>Lookup to the latest orientation record for the student. This is only populated if a student attended orientation.</inlineHelpText>
    <label>Last Orientation Attendee</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>Contacts (Last Orientation Attendee)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>