unpackaged/main/default/objects/Contact/fields/Last_Term_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Last_Term_Enrolled__c</fullName>
    <label>Last Term Enrolled</label>
    <length>4</length>
    <type>Text</type>
</CustomField>