unpackaged/main/default/objects/Contact/fields/Latest_Admit_Term__c.field-meta.xml
<CustomField>
    <fullName>Latest_Admit_Term__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Latest Admit Term</label>
    <length>4</length>
    <type>Text</type>
</CustomField>