unpackaged/main/default/objects/Contact/fields/Latest_Open_House_Record__c.field-meta.xml
<CustomField>
    <fullName>Latest_Open_House_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Updated by Flow to pull most recent created Attendee record for Open House</description>
    <inlineHelpText>Automatically updated with newest Open House Attendee record</inlineHelpText>
    <label>Latest Open House Record</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts_OPH</relationshipName>
    <type>Lookup</type>
</CustomField>