unpackaged/main/default/objects/Contact/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Contact&#39;s Legal Name. MDC integration populated field.</description>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>