unpackaged/main/default/objects/Contact/fields/Live_in_Miami_Dade_County__c.field-meta.xml
<CustomField>
    <fullName>Live_in_Miami_Dade_County__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Live in Miami-Dade County</label>
    <type>Checkbox</type>
</CustomField>