unpackaged/main/default/objects/Contact/fields/Majority_Campus__c.field-meta.xml
<CustomField>
    <fullName>Majority_Campus__c</fullName>
    <description>This is the campus where the student has the majority of their credits in.</description>
    <inlineHelpText>This is the campus where the student has the majority of their credits in.</inlineHelpText>
    <label>Majority Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hialeah</fullName>
                <label>Hialeah Campus</label>
            </value>
            <value>
                <fullName>Homestead</fullName>
                <label>Homestead Campus</label>
            </value>
            <value>
                <fullName>Padron</fullName>
                <label>Padron Campus</label>
            </value>
            <value>
                <fullName>Kendall</fullName>
                <label>Kendall Campus</label>
            </value>
            <value>
                <fullName>Medical</fullName>
                <label>Medical Campus</label>
            </value>
            <value>
                <fullName>North</fullName>
                <label>North Campus</label>
            </value>
            <value>
                <fullName>MDC Online</fullName>
            </value>
            <value>
                <fullName>West</fullName>
                <label>West Campus</label>
            </value>
            <value>
                <fullName>Wolfson</fullName>
                <label>Wolfson Campus</label>
            </value>
            <value>
                <fullName>Meek</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>