unpackaged/main/default/objects/Contact/fields/Majority_Campus_Previous_Term__c.field-meta.xml
<CustomField>
    <fullName>Majority_Campus_Previous_Term__c</fullName>
    <label>Majority Campus Previous Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hialeah</fullName>
            </value>
            <value>
                <fullName>Homestead</fullName>
            </value>
            <value>
                <fullName>Padron</fullName>
            </value>
            <value>
                <fullName>Kendall</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Meek</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>MDC Online</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Wolfson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>