unpackaged/main/default/objects/Contact/fields/Meets_All_Criteria_for_ADS__c.field-meta.xml
<CustomField>
    <fullName>Meets_All_Criteria_for_ADS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Meets All Criteria for ADS</label>
    <type>Checkbox</type>
</CustomField>