unpackaged/main/default/objects/Contact/fields/Meets_All_Criteria_Without_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Meets_All_Criteria_Without_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Meets All Criteria Without Enrollment</label>
    <type>Checkbox</type>
</CustomField>