unpackaged/main/default/objects/Contact/fields/Modern_Campus_ID__c.field-meta.xml
<CustomField>
    <fullName>Modern_Campus_ID__c</fullName>
    <description>Modern Campus Student ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Modern Campus Student ID</inlineHelpText>
    <label>Modern Campus ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>