unpackaged/main/default/objects/Contact/fields/MyMDC_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>MyMDC_Account_Created__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>Current_Opportunity__r.My_MDC_Account_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyMDC Account Created</label>
    <type>Checkbox</type>
</CustomField>