unpackaged/main/default/objects/Contact/fields/NWSA_College__c.field-meta.xml
<CustomField>
    <fullName>NWSA_College__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>NWSA - College</label>
    <type>Checkbox</type>
</CustomField>