unpackaged/main/default/objects/Contact/fields/NWSA_Dual_Enrollee__c.field-meta.xml
<CustomField>
    <fullName>NWSA_Dual_Enrollee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>NWSA - Dual Enrollee</label>
    <type>Checkbox</type>
</CustomField>