unpackaged/main/default/objects/Contact/fields/Official_College_Transcripts_Received__c.field-meta.xml
<CustomField>
    <fullName>Official_College_Transcripts_Received__c</fullName>
    <description>Used by Pardot for Onboarding Task email templates and dynamic lists</description>
    <formula>Current_Opportunity__r.Official_College_Transcripts_Received__c</formula>
    <label>Official College Transcripts Received</label>
    <type>Checkbox</type>
</CustomField>