unpackaged/main/default/objects/Contact/fields/Official_HS_Transcript_Received__c.field-meta.xml
<CustomField>
    <fullName>Official_HS_Transcript_Received__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>Current_Opportunity__r.Official_HS_Transcript_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Official HS Transcript Received</label>
    <type>Checkbox</type>
</CustomField>