unpackaged/main/default/objects/Contact/fields/Onboarding_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Cohort__c</fullName>
    <label>Onboarding Cohort</label>
    <length>4</length>
    <type>Text</type>
</CustomField>