unpackaged/main/default/objects/Contact/fields/Onboarding_Meta_Major__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Meta_Major__c</fullName>
    <description>Used for Pardot. Not for the page layout. Updated via Flow.</description>
    <label>Onboarding Meta Major</label>
    <type>TextArea</type>
</CustomField>