unpackaged/main/default/objects/Contact/fields/Onboarding_Task_Completion__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Task_Completion__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>Current_Opportunity__r.Onboarding_Task_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Task Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>