unpackaged/main/default/objects/Contact/fields/OPH_Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>OPH_Attendance_Status__c</fullName>
    <description>Used in Pardot Dynamic Lists for OPH Programs</description>
    <formula>TEXT(Latest_Open_House_Record__r.conference360__Attendance_Status__c)</formula>
    <label>OPH Attendance Status</label>
    <type>Text</type>
</CustomField>