unpackaged/main/default/objects/Contact/fields/OPH_Attendee_Link__c.field-meta.xml
<CustomField>
    <fullName>OPH_Attendee_Link__c</fullName>
    <description>Used for Pardot Programs and Email Templates</description>
    <formula>Latest_Open_House_Record__r.conference360__AttendeeLink__c</formula>
    <label>OPH Attendee Link</label>
    <type>Text</type>
</CustomField>