unpackaged/main/default/objects/Contact/fields/OPH_Campus__c.field-meta.xml
<CustomField>
    <fullName>OPH_Campus__c</fullName>
    <description>Used in Pardot Programs and Templates</description>
    <formula>Latest_Open_House_Record__r.Event_Campus__c</formula>
    <label>OPH Campus</label>
    <type>Text</type>
</CustomField>